--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,23 @@ repositories {
 }
 
 dependencies {
+
+    // JWT
+    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+    //SECURITY
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
+    //validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    //mysql
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    //jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
